2009-01-06  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Add update site information.  Remove Linux requirement.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added dependencies and Linux requirement.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Typo in feature ID.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.